--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -41,6 +41,12 @@
 		<version>4.0.0</version>
 		<scope>provided</scope>
 	</dependency>
+	 <dependency>
+		<groupId>jstl</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+		<scope>provided</scope>
+	</dependency>
 	<dependency>
          <groupId>org.apache.tomcat.embed</groupId>
          <artifactId>tomcat-embed-jasper</artifactId>
